--- a/_sass/_layouts.scss
+++ b/_sass/_layouts.scss
@@ -83,7 +83,7 @@ header {
 
                 a {
                     img {
-                        max-width: 300px;
+                        max-width: 250px;
                     }
                 }
             }
